@@ -13,9 +13,11 @@ class DexterityImageView(BrowserView):
     """
     implements(IImageView)
     field = None
+    img = None
 
     def __init__(self, context, request):
         super(DexterityImageView, self).__init__(context, request)
+        self.img = context
         self.field = getattr(context, 'image', None)
 
     def display(self, scalename='thumb'):
@@ -38,11 +40,50 @@ class DexterityImageView(BrowserView):
         if not self.display(scalename):
             raise NotFound(self.request, scalename)
 
-        scaleview = queryMultiAdapter((self.context, self.request),
-                                      name='images')
+        scaleview = queryMultiAdapter((self.img, self.request), name='images')
         scale = scaleview.scale('image', scale=scalename)
 
-        if scale:
-            return scale
+        return scale or ""
 
-        return self.context
+
+class DexterityContainerImageView(DexterityImageView):
+    """ Image View for Dexterity containers
+    """
+
+    implements(IImageView)
+    field = None
+    img = None
+
+    def __init__(self, context, request):
+        super(DexterityContainerImageView, self).__init__(context, request)
+
+        here = '/'.join(self.context.getPhysicalPath())
+        results = self.context.portal_catalog.queryCatalog(
+            {
+                'portal_type': 'Image',
+                'path': {
+                    'query': here,
+                    'depth': 1,
+                },
+                'sort_on': 'getObjPositionInParent'
+            },  # show_all=1, show_inactive=1,
+        )
+        self.field = None
+        self.has_images = False
+
+        if results:
+            self.has_images = True
+            self.img = results[0].getObject()
+            self.field = getattr(self.img, 'image', None)
+
+    def display(self, scalename='thumb'):
+        """ Return a bool if the scale should be displayed
+        """
+
+        if not self.has_images:
+            return False
+
+        if self.field is None:
+            return False
+
+        return True
