@@ -13,6 +13,13 @@
       allowed_interface="eea.depiction.browser.interfaces.IImageView" />
 
     <browser:page
+      for="plone.dexterity.interfaces.IDexterityContainer"
+      name="imgview"
+      class=".dexterity.DexterityContainerImageView"
+      permission="zope.Public"
+      allowed_interface="eea.depiction.browser.interfaces.IImageView" />
+
+    <browser:page
       for="plone.dexterity.interfaces.IDexterityContent"
       name="image_large"
       class=".default.ImageLarge"
