@@ -3,6 +3,8 @@ Changelog
 
 7.0.dev0 - (unreleased)
 -----------------------
+- Bug fix: allow Dexterity containers to show contained image as thumb
+  [tiberich #92045]
 - Bug fix: handle more cases of images in eea.rdfmarshaller depiction modifier
   [tiberich #92045]
 - Bug fix: use a NamedBlobImage when adding initial image. This fixes issues
